@@ -1,3 +1,12 @@
+Next release
+============
+
+Features
+--------
+
+- Speed up ``repoze.bfg.location.lineage`` slightly.
+
+
 1.1a4 (2009-09-23)
 ==================
 
